# storage/api-docs/api-docs.json
@@ -381,6 +381,10 @@
                                                         "type": "number",
                                                         "example": "0"
                                                     },
+                                                    "dateOfBirth": {
+                                                        "type": "string",
+                                                        "example": "2022-05-19"
+                                                    },
                                                     "roleId": {
                                                         "type": "number",
                                                         "example": 2
